<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">TintVision</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="overlay_settings">Overlay Settings</string>
    <string name="underliner_settings">Underliner Settings</string>
    <string name="toggle">On / off</string>
    <string name="title_activity_overlay_settings">Overlay Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="opacity">Opacity</string>
    <string name="colour">Colour</string>
    <string name="defaultColour">#ffff00</string>
    <string name="title_activity_underliner_settings">Underliner Settings</string>
    <string name="thickness">Thickness</string>
    <string name="width">Width</string>
    <string name="defaultUnderlinerColour">#000000</string>

</resources>
