<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.tintvision.UnderlinerSettingsActivity" >

    <TextView
        android:id="@+id/titleTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:gravity="center_horizontal"
        android:text="@string/underliner_settings"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textSize="@dimen/titleText"
        android:textStyle="bold" />

    <Switch
        android:id="@+id/underlinerToggle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/thicknessTextView"
        android:layout_alignRight="@+id/titleTextView"
        android:layout_below="@+id/titleTextView"
        android:layout_marginTop="15dp"
        android:text="@string/toggle"
        android:textSize="@dimen/textMedium"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/thicknessTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/titleTextView"
        android:layout_alignStart="@+id/titleTextView"
        android:layout_below="@+id/underlinerToggle"
        android:layout_marginStart="10dp"
        android:layout_marginTop="20dp"
        android:text="@string/thickness"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textSize="@dimen/textMedium"
        android:textStyle="bold" />

    <SeekBar
        android:id="@+id/thicknessSeekBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/colourTextView"
        android:layout_alignParentRight="true"
        android:layout_marginStart="10dp"
        android:layout_toEndOf="@+id/thicknessTextView"
        android:layout_toRightOf="@+id/thicknessTextView"
        android:max="20"
        android:progress="10" />

    <TextView
        android:id="@+id/colourTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/titleTextView"
        android:layout_alignStart="@+id/colourText"
        android:layout_below="@+id/thicknessTextView"
        android:layout_marginStart="10dp"
        android:layout_marginTop="116dp"
        android:text="@string/colour"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textSize="@dimen/textMedium"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/colourText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/titleTextView"
        android:layout_below="@+id/colourTextView"
        android:ems="10"
        android:inputType="text"
        android:text="@string/defaultUnderlinerColour" >

        <requestFocus />
    </EditText>

    <SeekBar
        android:id="@+id/widthSeekBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignRight="@+id/underlinerToggle"
        android:layout_alignStart="@+id/thicknessSeekBar"
        android:layout_below="@+id/thicknessTextView"
        android:layout_marginTop="18dp"
        android:max="600"
        android:progress="400" />

    <TextView
        android:id="@+id/widthTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/thicknessTextView"
        android:layout_alignTop="@+id/widthSeekBar"
        android:text="@string/width"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textSize="@dimen/textMedium"
        android:textStyle="bold" />

</RelativeLayout>